[project]
name = "reformulating-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "manuelgerardzuccaro",email = "gerard3599@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "marimo (>=0.14.10,<0.15.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
